--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alivia HTML Project</title>
     <link rel="stylesheet" href="./css/base.css">
-<!--    Reset-->
+    <!--    Reset-->
     <link rel="stylesheet" href="./css/reset.css">
-<!--    Fonts-->
+    <!--    Fonts-->
     <link rel="stylesheet" href="./css/fonts/Georgia/stylesheet.css">
     <link rel="stylesheet" href="./css/fonts/Lato/stylesheet.css">
-<!--    Blocks-->
+    <!--    Blocks-->
+    <link rel="stylesheet" href="./css/blocks/btn.css">
     <link rel="stylesheet" href="./css/blocks/header.css">
+    <link rel="stylesheet" href="./css/blocks/home.css">
 
 </head>
 <body>
@@ -22,7 +24,7 @@
     <div class="container">
         <div class="header-row">
             <div class="header-logo"><img src="./img/logo.svg" alt="Logo"></div>
-            <nav     class="header-nav">
+            <nav class="header-nav">
                 <ul>
                     <li><a href="#">Why Alivio</a></li>
                     <li><a href="#">Solutions</a></li>
@@ -31,18 +33,40 @@
                 </ul>
             </nav>
             <div class="header-login">
-                <a href="#">Sign in</a>
+                <a class="header-login-link" href="#">Sign in</a>
                 <a href="#" class="btn">Start Trial</a>
             </div>
-
-
-
-
-
 
         </div>
     </div>
 </header>
+
+<main>
+    <section class="home">
+        <div class="container">
+            <div class="home-content">
+                <h1 class="home-heading">Be aware, Manage well.</h1>
+                <div class="home-text">
+                    <p>Everyone experiences stress in different ways.
+                        Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                </div>
+
+                <div class="home-btn">
+                    <a href="#" class="btn btn-big">Find Your Way</a>
+                </div>
+
+                            </div>
+        </div>
+
+        <div class="home-bg-img">
+            <img src="./img/home/bg.jpg" alt="">
+        </div>
+
+    </section>
+</main>
+
+
+<footer></footer>
 
 </body>
 </html>
