--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/blocks/btn.css">
     <link rel="stylesheet" href="./css/blocks/header.css">
     <link rel="stylesheet" href="./css/blocks/home.css">
+    <link rel="stylesheet" href="./css/blocks/how-it-works.css">
 
 </head>
 <body>
@@ -42,7 +43,7 @@
 </header>
 
 <main>
-    <section class="home">
+    <section class="home none">
         <div class="container">
             <div class="home-content">
                 <h1 class="home-heading">Be aware, Manage well.</h1>
@@ -55,13 +56,74 @@
                     <a href="#" class="btn btn-big">Find Your Way</a>
                 </div>
 
-                            </div>
+            </div>
         </div>
 
         <div class="home-bg-img">
             <img src="./img/home/bg.jpg" alt="">
         </div>
 
+    </section>
+
+    <section class="how-it-works">
+        <div class="container">
+
+            <div class="how-it-works-header">
+                <div class="how-it-works-header-head">
+                    <h2 class="how-it-works-title">How it works</h2>
+                    <h3 class="how-it-works-subtitle">Understand & Release
+                        the stress in 3 steps
+                    </h3>
+                </div>
+
+                <div class="how-it-works-header-content">
+                    <p>Alivio offers as many journals it takes, tackling different areas such as anxiety,
+                        overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware
+                        of your emotions, and guide you in how to manage stress.</p>
+                </div>
+
+            </div>
+
+            <div class="how-it-works-steps">
+
+                <div class="step">
+                    <h3 class="step-heading" data-number="01">Personalize</h3>
+                    <div class="step-text">
+                        <p> Answer a quick survey about how you express yourself, what causes you stress, and what area
+                            would you like to work on. This way, we can fully personalize your journal!</p>
+                    </div>
+                    <div class="step-img-wrapper">
+                        <img class="step-img" src="/img/steps/step-01.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="step">
+                    <h3 class="step-heading" data-number="02">Write & Understand</h3>
+                    <div class="step-text">
+                        <p> Write, draw, reflect, understand. Alivio will guide you through the prompts and will help
+                            you manage your stress!</p>
+                    </div>
+                    <div class="step-img-wrapper">
+                        <img class="step-img" src="/img/steps/step-02.jpg" alt="">
+                    </div>
+
+                </div>
+
+                <div class="step">
+                    <h3 class="step-heading" data-number="03">Alivio!</h3>
+                    <div class="step-text">
+                        <p> Now you are aware, and have a way to manage and overcome your own stress.
+                            What are you waiting for? Alivio today!</p>
+                    </div>
+                    <div class="step-img-wrapper">
+                        <img class="step-img" src="/img/steps/step-03.jpg" alt="">
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
     </section>
 </main>
 
