--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/blocks/header.css">
     <link rel="stylesheet" href="./css/blocks/home.css">
     <link rel="stylesheet" href="./css/blocks/how-it-works.css">
+    <link rel="stylesheet" href="./css/blocks/story.css">
 
 </head>
 <body>
@@ -43,6 +44,7 @@
 </header>
 
 <main>
+
     <section class="home none">
         <div class="container">
             <div class="home-content">
@@ -65,7 +67,8 @@
 
     </section>
 
-    <section class="how-it-works">
+
+    <section class="how-it-works none">
         <div class="container">
 
             <div class="how-it-works-header">
@@ -125,6 +128,31 @@
 
         </div>
     </section>
+
+
+    <section class="story none">
+        <div class="container">
+            <div class="story-row">
+                <div class="story-content">
+                    <div class="story-heading"> Let's hear about Kayla's success story</div>
+                    <div class="story-text">See how well Alivio works in a real customer’s life.</div>
+                    <div class="story-btn">
+                        <a class="btn btn-big" href="#">Let’s get started</a>
+                    </div>
+                </div>
+                <div class="story-video">
+                    <div class="story-video-overlay">
+                    <button class="story-video-btn">
+                        <img src="./img/story/play-white.svg" alt="Play">
+                    </button>
+                   </div>
+                    <img src="./img/story/video-cover.jpg" alt="Video" class="story-video-object">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </main>
 
 
