--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="./css/blocks/home.css">
     <link rel="stylesheet" href="./css/blocks/how-it-works.css">
     <link rel="stylesheet" href="./css/blocks/story.css">
+    <link rel="stylesheet" href="./css/blocks/product.css">
+    <link rel="stylesheet" href="./css/blocks/card.css">
+    <link rel="stylesheet" href="./css/blocks/avatar.css">
 
 </head>
 <body>
@@ -131,10 +134,10 @@
 
 
     <section class="story none">
-        <div class="container">
+        <div class="container container-wide">
             <div class="story-row">
                 <div class="story-content">
-                    <div class="story-heading"> Let's hear about Kayla's success story</div>
+                    <h2 class="story-heading"> Let's hear about Kayla's success story</h2>
                     <div class="story-text">See how well Alivio works in a real customer’s life.</div>
                     <div class="story-btn">
                         <a class="btn btn-big" href="#">Let’s get started</a>
@@ -142,11 +145,64 @@
                 </div>
                 <div class="story-video">
                     <div class="story-video-overlay">
-                    <button class="story-video-btn">
-                        <img src="./img/story/play-white.svg" alt="Play">
-                    </button>
-                   </div>
+                        <button class="story-video-btn">
+                            <img src="./img/story/play-white.svg" alt="Play">
+                        </button>
+                    </div>
                     <img src="./img/story/video-cover.jpg" alt="Video" class="story-video-object">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="product none">
+
+        <div class="container">
+            <div class="product-row">
+
+                <div class="product-img-wrapper">
+                    <img src="./img/product/photo.jpg" alt="" class="product-img">
+
+                    <div class="product-card">
+                        <div class="card">
+                            <h3 class="card-title">Customized For</h3>
+
+                            <div class="card-avatar">
+                                <div class="avatar">
+                                    <img class="avatar-img" src="./img/product/avatar.jpg" alt="Avatar">
+                                    <h4 class="avatar-name"> Mikayla</h4>
+                                </div>
+                            </div>
+
+                            <div class="card-contents">
+
+                                <h3 class="card-contents-title">Your custom contents</h3>
+                                <ul>
+                                    <li>Understand Your Stress</li>
+                                    <li>Anger Management</li>
+                                </ul>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="product-content">
+                    <h2 class="product-content-title">Our product</h2>
+                    <h3 class="product-content-subtitle">You tell us your stress,
+                        We make your diary</h3>
+                    <div class="product-content-text">
+                        <p>Everyone experiences it, and in different ways.
+                            Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                    </div>
+                    <div class="product-content-btn">
+                        <a href="" class="btn btn-big">Find Your Way</a>
+                    </div>
+
                 </div>
             </div>
         </div>
