Added "footer"-section in main-block and fixed an unimportant bug in the "story"-section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/blocks/product.css">
     <link rel="stylesheet" href="./css/blocks/card.css">
     <link rel="stylesheet" href="./css/blocks/avatar.css">
+    <link rel="stylesheet" href="./css/blocks/footer.css">
 
 </head>
 <body>
@@ -48,7 +49,7 @@
 
 <main>
 
-    <section class="home none">
+    <section class="home ">
         <div class="container">
             <div class="home-content">
                 <h1 class="home-heading">Be aware, Manage well.</h1>
@@ -71,7 +72,7 @@
     </section>
 
 
-    <section class="how-it-works none">
+    <section class="how-it-works ">
         <div class="container">
 
             <div class="how-it-works-header">
@@ -133,7 +134,7 @@
     </section>
 
 
-    <section class="story none">
+    <section class="story ">
         <div class="container container-wide">
             <div class="story-row">
                 <div class="story-content">
@@ -156,7 +157,7 @@
     </section>
 
 
-    <section class="product none">
+    <section class="product ">
 
         <div class="container">
             <div class="product-row">
@@ -208,6 +209,23 @@
         </div>
     </section>
 
+    <section class="footer">
+        <div class="container">
+            <div class="footer-content">
+
+                <img class="footer-logo" src="./img/footer-logo.svg" alt="logo">
+
+                <nav class="footer-nav">
+                    <ul>
+                        <li><a href="#"></a>Why Alivio</li>
+                        <li><a href="#"></a>Solutions</li>
+                        <li><a href="#"></a>Community</li>
+                        <li><a href="#"></a>Pricing</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </section>
 
 </main>
 
