fixed an unimportant bug in the "steps"-section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             would you like to work on. This way, we can fully personalize your journal!</p>
                     </div>
                     <div class="step-img-wrapper">
-                        <img class="step-img" src="/img/steps/step-01.jpg" alt="">
+                        <img class="step-img" src="./img/steps/step-01.jpg" alt="">
                     </div>
                 </div>
 
@@ -111,7 +111,7 @@
                             you manage your stress!</p>
                     </div>
                     <div class="step-img-wrapper">
-                        <img class="step-img" src="/img/steps/step-02.jpg" alt="">
+                        <img class="step-img" src="./img/steps/step-02.jpg" alt="">
                     </div>
 
                 </div>
@@ -123,7 +123,7 @@
                             What are you waiting for? Alivio today!</p>
                     </div>
                     <div class="step-img-wrapper">
-                        <img class="step-img" src="/img/steps/step-03.jpg" alt="">
+                        <img class="step-img" src="./img/steps/step-03.jpg" alt="">
                     </div>
 
                 </div>
