Added CSS for mobiles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-<header class="header">
+<header class="header ">
     <div class="container">
         <div class="header-row">
             <div class="header-logo"><img src="./img/logo.svg" alt="Logo"></div>
@@ -78,8 +78,7 @@
             <div class="how-it-works-header">
                 <div class="how-it-works-header-head">
                     <h2 class="how-it-works-title">How it works</h2>
-                    <h3 class="how-it-works-subtitle">Understand & Release
-                        the stress in 3 steps
+                    <h3 class="how-it-works-subtitle">Understand & Release the stress in 3 steps
                     </h3>
                 </div>
 
@@ -209,7 +208,8 @@
         </div>
     </section>
 
-    <section class="footer">
+
+    <section class="footer ">
         <div class="container">
             <div class="footer-content">
 
